# notion-t

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-07-notion-t.md
docs/superpowers/specs/: 2026-05-07-notion-t-design.md
src/noterminal/: __main__.py  config.py  markdown.py  notion_api.py  repl.py  setup_wizard.py
src/noterminal/commands/: delete.py  edit.py  editor.py  help.py  list.py  new.py  open.py  search.py
tests/: test_command_delete.py  test_command_edit.py  test_command_editor.py  test_command_help.py  test_command_list.py  test_command_new.py  test_command_open.py  test_command_search.py  test_config.py  test_main.py  test_markdown.py  test_notion_api.py  test_repl.py  test_setup_wizard.py
tools/: debug_db.py
