[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noterminal"
version = "0.1.0"
description = "Interactive Notion CLI for quick notes from the terminal"
requires-python = ">=3.11"
authors = [{ name = "Ueslei Nascimento" }]
dependencies = [
    "notion-client>=2.2.1,<3.0",
    "prompt_toolkit>=3.0.43,<4.0",
    "rich>=13.7.0,<14.0",
    "tomli-w>=1.0.0,<2.0",
]

[project.scripts]
notion-t = "noterminal.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/noterminal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
